<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.weathery.Home.View.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fav_city"
        android:name="com.example.weathery.Favorite.View.ShowFavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_fav_city" />

    <fragment
        android:id="@+id/nav_alert"
        android:name="com.example.weathery.AlarmAlert.View.AlertFragment"
        android:label="@string/alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.weathery.Settings.View.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />
</navigation>