<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/welcomeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_choice"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUseGPS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GPS"
        android:layout_marginBottom="16dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/weather_card_background"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUseMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Map"
        android:textColor="#FFFFFF"
        android:background="@drawable/weather_card_background"
        />
</LinearLayout>
